...
    <string name="editor_button_add">Add</string>

    <!-- Category Manager -->
    <string name="category_manager_hint_category_name">Name</string>
    <string name="category_manager_hint_category_color">Color</string>
    <string name="category_manager_add_category">Add category</string>
    <string name="category_manager_edit_category">Edit category</string>
    <string name="category_manager_name_already_used">Category name already in use</string>
    <string name="category_manager_enter_name">Please enter category name</string>

    <!-- Setlist Editor -->
    <string name="setlist_editor_hint_selected">Selected</string>
    <string name="setlist_editor_button_pick_songs">Pick songs</string>
...
