...
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tin_song_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/ed_max_length_song_title"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
...
